crates/haneul/tests/snapshots/shell_tests__implicits__test.sh.snap
---
source: crates/haneul/tests/shell_tests.rs
description: tests/shell_tests/implicits/test.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# checks that testing a package that implicitly depends on `Bridge` works
haneul move test -p example 2> /dev/null

----- results -----
success: true
exit_code: 0
----- stdout -----
INCLUDING DEPENDENCY Bridge
INCLUDING DEPENDENCY DeepBook
INCLUDING DEPENDENCY HaneulSystem
INCLUDING DEPENDENCY Haneul
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
Running Move unit tests
Test result: OK. Total tests: 0; passed: 0; failed: 0

----- stderr -----
